# Test_Sarafan_2

./: .env.sample  README.md  pyproject.toml
config/: settings.py  urls.py
fixtures/: 01_fixture.json
store/: admin.py  models.py  serializers.py  urls.py  views.py
store/migrations/: 0001_initial.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
