[tool.poetry]
name = "testsarafan"
version = "0.1.0"
description = "test project sarafan"
authors = ["Sem <semseveryanin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.6.0"
psycopg2-binary = "^2.9.10"
drf-yasg = "^1.21.8"
pillow = "^11.0.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
